# generalized_face_model

./: .gitignore  .gitmodules  README.md  main.py  pyproject.toml  test_landmark_fitter.py  test_mvlm.py  test_topology.py
config/: general.json  sculptor_fitting.json
src/: flame_fitting.py  generate_neutral.py  get_template.py  landmark_fitter.py  sculptor_fitter.py
utils/: flame_fitting.py
utils/config/: model_path.py
utils/results/: mesh_fitting.ply  parameters.npz
