[project]
name = "learning-face-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pip>=25.0.1",
    "setuptools>=75.3.2",
    "wheel>=0.45.1",
    "open3d>=0.19.0",
    "tqdm>=4.67.1",
    "trimesh>=4.6.9",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "torchaudio>=2.5.1",
    "einops>=0.8.1",
    "chumpy",
    "flame-pytorch",
    "mvlm",
]

[tool.uv.sources]
chumpy = { git = "https://github.com/mattloper/chumpy.git" }
flame-pytorch = { path = "libs/FLAME_PyTorch" }
mvlm = { path = "libs/mvlm", editable = true }

[tool.uv]
config-settings = { editable_mode = "compat" }
